Final Word Change

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     
     <body>
-      <p>Check it Out!</p>
+      <p>Wow look ma! I'm doing something with my life!</p>
     </body>
 </html>
     
