Name and Address

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
       <link rel="stylesheet" href="style.css"/>
     </head>
     
-    <body>
+   <div class="main">
+     <h1>Amber Volkmann</h1>
+     <h2>5131 London Road</h2>
+     <h2>Duluth, MN 55804</h2>
       <p>Wow look ma! I'm doing something with my life!</p>
     </body>
 </html>
