--- a/index.html
+++ b/index.html
@@ -7,16 +7,39 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body id="center">
+
     <h2 class="header">Amber Volkmann</h2>
     <h3>5131 London Road</h3>
     <h3>Duluth, MN 55804</h3>
     <h3>(832) 933-9122</h3>
+
+    <h2>Professional Work History</h2>
+    <h3>Heirloom Property Mangement</h3>
+    <h3> Staff Accountant I</h3>
+    <h4>August 2018 - Present</h4>
     <ul>
-        <li>worked here</li>
-        <li>worked here</li>
+        <li>Prepared general ledger entries by maintaining records and files; reconciling accounts.</li>
+        <li>Assisted Senior Accountant with payroll system and payroll related items.</li>
+        <li>Oversaw the execution of tenant and owner billing to ensure accurate reporting.</li>
+        <li>Processed accounts payable and accounts receivable bi-weekly.</li>
+        <li>Managed employee credit card charges and weekly time cards.</li>
     </ul>
     
+    <h3>WorkWell Prevention and Care</h3>
+    <h3>Accounting Assistant</h3>
+    <h4>August 2016 - June 2018</h4>
+        <p>Assisted with daily accounting duties, such as invoicing customers, paying vendors, entering bills, daily banking, and general bookkeeping. Ensured all clients received necessary information such as status of applicants, status of bills, and further clarification of issues that arise.</p>
+
+    <h3>Black's Market Table</h3>
+    <h3>Shift Manager</h3>
+    <h4>Augsut 2014 - July 2016</h4>
+    <p>Ensured that daily operations were taken care of, such as overseeing employee work met company standards, providing excellent customer service, and completing opening and closing procedures, including deposits.</p>
+
+    <h3>Aramco Services Company</h3>
+    <h3>Intern</h3>
+    <h4>April 2014 - August 2014</h4>
+    <p>Assisted with daily logistics and procurement responsibilities, such as invoice vetting, data entry, and monitoring shipping and receiving inventory.</p>
 </body>
 </html>
     
