--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,15 +7,22 @@
     <link rel="stylesheet" href="style.css">
     <title>Amber's Github Page</title>
 </head>
-<body id="center">
-    
 
+<body id="center">
+
+   
     <h2 class="header">Amber Volkmann</h2>
-    <h5>5131 London Road</h5>
-    <h5>Duluth, MN 55804</h5>
-    <h5>(832) 933-9122</h5>
+
+    <h5>5131 London Road
+</br>
+    Duluth, MN 55804
+</br>
+    (832) 933-9122</h5>
+
+
 </br>
     <h2>Professional Work History</h2>
+
 <div>
     
     <h3>Heirloom Property Management</h3>
